--- a/webshop/src/main/resources/static/cart.html
+++ b/webshop/src/main/resources/static/cart.html
@@ -22,6 +22,9 @@
         <li>
             <a href="./newProduct.html">물품등록</a>
         </li>
+        <li>
+            <a href="/">메인</a>
+        </li>
     </ul>
 </nav>
 <div>
