--- a/webshop/src/main/resources/static/index.html
+++ b/webshop/src/main/resources/static/index.html
@@ -52,6 +52,9 @@
         <li>
             <a href="./newProduct.html">물품등록</a>
         </li>
+        <li>
+            <a href="/">메인</a>
+        </li>
     </ul>
 </nav>
 
