--- a/webshop/src/main/resources/static/login.html
+++ b/webshop/src/main/resources/static/login.html
@@ -106,6 +106,8 @@
             alert("로그인 성공");
             sessionStorage.setItem("userId", res.id);
             location.href = "/";
+        } else {
+            alert("로그인 실패");
         }
     }
 </script>
