--- a/webshop/src/main/resources/static/register.html
+++ b/webshop/src/main/resources/static/register.html
@@ -172,6 +172,8 @@
 
         if (res === true)
             alert("이미 아이디가 존재합니다");
+        else
+            alert("사용할 수 있는 아이디입니다");
     }
 
     async function register() {
@@ -190,8 +192,14 @@
         });
 
         console.log(res);
-    }
 
+        if(res) {
+            alert("회원가입 성공\n로그인페이지로 이동합니다");
+            location.href = "/login.html";
+        } else {
+            alert("회원가입 실패");
+        }
+    }
     function registerCancel() {
         $("#inputRegisterId").val("");
         $("#inputRegisterPassword").val("");
