--- a/webshop/bin/main/static/index.html
+++ b/webshop/bin/main/static/index.html
@@ -1,89 +1,142 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
+<html lang="en">
+<head>
     <title>쇼핑몰</title>
+    <meta charset="UTF-8">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  </head>
-  <body>
-    <h1>로그인</h1>
-    <div>
-      <p>
-        <span>아이디</span>
-        <input id="inputLoginId" type="text" />
-      </p>
-      <p>
-        <span>패스워드</span>
-        <input id="inputLoginPassword" type="password" />
-      </p>
-      <button onclick="login();">로그인</button>
+    <link rel="stylesheet" href="./menu.css">
+    <link rel="stylesheet" href="./nav.css">
+</head>
+<style>
+    html, body {
+        height: 100%;
+    }
+
+    body {
+        margin: 0;
+        padding: 0;
+    }
+
+    #productArea {
+        /*padding-top: 14px;*/
+    }
+
+    #products > li > a{
+        display: block;
+        padding: 24px;
+        background-color: #b8bac4;
+        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    }
+
+    #products > li > a:hover {
+        filter: brightness(75%);
+    }
+
+    #products > li a {
+        color: #565656;
+    }
+</style>
+<body>
+
+<nav id="pageNav">
+    <ul id="nav">
+        <li>
+            <a href="./register.html">회원가입</a>
+        </li>
+        <li>
+            <a href="./login.html">로그인</a>
+        </li>
+        <li>
+            <a href="./cart.html">내 장바구니</a>
+        </li>
+        <li>
+            <a href="./newProduct.html">물품등록</a>
+        </li>
+        <li>
+            <a href="/">메인</a>
+        </li>
+    </ul>
+</nav>
+
+<nav>
+    <ul id="menus">
+
+    </ul>
+    <div id="productArea">
+        <ul id="products">
+
+        </ul>
     </div>
+</nav>
 
-    <script>
-      const ajax = {
-        server: "http://localhost:8080",
-        dataType: "application/json",
-        contentType: "application/json",
+<script src="./ajax.js"></script>
 
-        get: function (endpoint, success, error) {
-          $.ajax({
-            url: this.server + endpoint,
-            method: "GET",
-            dataType: this.dataType,
-            success,
-            error,
-          });
+<script>
+    const api = {
+        getMenus: function () {
+            return new Promise((resolve, reject) => {
+                ajax.get("/api/menu", res => {
+                    resolve(res);
+                });
+            })
         },
-        post: function (endpoint, data, success, error) {
-          $.ajax({
-            url: this.server + endpoint,
-            method: "POST",
-            contentType: this.contentType,
-            data: JSON.stringify(data),
-            success,
-            error,
-          });
-        },
-        put: function (endpoint, data, success, error) {
-          $.ajax({
-            url: this.server + endpoint,
-            method: "PUT",
-            contentType: this.contentType,
-            data: JSON.stringify(data),
-            success,
-            error,
-          });
-        },
-        delete: function (endpoint, success, error) {
-          $.ajax({
-            url: this.server + endpoint,
-            method: "DELETE",
-            dataType: this.dataType,
-            success,
-            error,
-          });
-        },
-      };
+        getProductsByMenuId: function (menuId) {
+            return new Promise((resolve, reject) => {
+                ajax.get(`/api/product/menu/${menuId}`, res => {
+                    resolve(res);
+                })
+            })
+        }
+    };
+</script>
 
-      const api = {
-        login: function (userId, password) {
-          return new Promise((resolve, reject) => {
-            ajax.post("/api/user/login", { userId, password }, (res) => {
-              resolve(res);
-            });
-          });
-        },
-      };
-    </script>
+<script>
+    init();
 
-    <script>
-      async function login() {
-        const res = await api.login(
-          $("#inputLoginId").val(),
-          $("#inputLoginPassword").val()
-        );
+    function init() {
+        getMenus();
+    }
+
+    async function getMenus() {
+        const res = await api.getMenus();
         console.log(res);
-      }
-    </script>
-  </body>
+
+        updateMenuUI(res);
+    }
+
+    function updateMenuUI(menus) {
+        $("#menus > li").remove();
+
+        for (menu of menus) {
+            $("#menus").append(`
+            <li data-id="${menu.id}" onclick="onMenuClick(${menu.id})">
+                <span>
+                    ${menu.name}
+                </span>
+            </li>
+            `);
+        }
+    }
+
+    async function onMenuClick(menuId) {
+        const res = await api.getProductsByMenuId(menuId);
+        console.log(res);
+
+        updateProductsUI(res);
+    }
+
+    function updateProductsUI(products) {
+        $("#products > li").remove();
+
+        for (product of products) {
+            $("#products").append(`
+            <li data-id="${product.id}}">
+                <a href="./product.html?id=${product.id}">${product.name}</a>
+            </li>
+            `);
+        }
+    }
+</script>
+
+</body>
 </html>
